[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Main.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/StartMenu.gd" type="Script" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.4, 0.4, 0.4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 536.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 206.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Stupid platformer"
align = 1

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 392.0
margin_top = 256.0
margin_right = 592.0
margin_bottom = 316.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Start"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_left = 392.0
margin_top = 264.0
margin_right = 592.0
margin_bottom = 324.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Back"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 392.0
margin_top = 366.0
margin_right = 592.0
margin_bottom = 426.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 392.0
margin_top = 476.0
margin_right = 592.0
margin_bottom = 536.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Quit"
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
